; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd.c_cmd_env.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd.c_cmd_env.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"env %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @cmd_env to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmd_env(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to i32*
  store i32* %8, i32** %5, align 8
  store i32 1, i32* %6, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = load i8, i8* %9, align 1
  %11 = sext i8 %10 to i32
  switch i32 %11, label %15 [
    i32 63, label %12
  ]

12:                                               ; preds = %2
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @cmd_help_percent(i32* %13)
  br label %19

15:                                               ; preds = %2
  %16 = load i32*, i32** %5, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @r_core_cmdf(i32* %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %17)
  store i32 %18, i32* %6, align 4
  br label %19

19:                                               ; preds = %15, %12
  %20 = load i32, i32* %6, align 4
  ret i32 %20
}

declare dso_local i32 @cmd_help_percent(i32*) #1

declare dso_local i32 @r_core_cmdf(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
